test/invalid/baseline/union-one.txt
Syntax error at line 1 in union-one.webidl:
typedef (OnlyOne) UnionOne;
                ^ At least two types are expected in a union type but found less
